# weather-event

./: .env.template  .gitignore  CODE_REVIEW_FIXES.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  README.md  REVIEW_SUMMARY.md  SECURITY_FIXES.md  TEST_RESULTS.md
.github/workflows/: e2e-tests.yml
.taskmaster/: state.json
.taskmaster/docs/: prd-init.md  prd-next.md  task-review-next.md
.taskmaster/reports/: task-complexity-report.json  task-complexity-report_next.json
.taskmaster/tasks/: tasks.json
core/: Cargo.toml
core/src/: lib.rs  models.rs
core/src/ai/: mod.rs  reschedule.rs
core/src/notifications/: email.rs  mod.rs  sms.rs
core/src/weather/: api.rs  mod.rs  safety.rs
e2e/: .env.test  TROUBLESHOOTING.md  cleanup.sh  package-lock.json  package.json  playwright.config.minimal.ts  playwright.config.ts  pnpm-lock.yaml  run-tests.sh  tsconfig.json
e2e/fixtures/: api-mocks.ts  test-data.ts  websocket-mock.ts
e2e/playwright-report/: index.html
e2e/test-results/: .last-run.json
e2e/test-results/reschedule-flow-Reschedule-05635-ion-of-reschedule-operation-webkit/: error-context.md
e2e/test-results/student-management-Student-24a4d-udent-list-with-all-details-firefox/: error-context.md
e2e/test-results/student-management-Student-67e1f-pty-student-list-gracefully-webkit/: error-context.md
e2e/tests/: basic.spec.ts  booking-creation.spec.ts  error-scenarios.spec.ts  reschedule-flow.spec.ts  student-management.spec.ts  weather-alerts.spec.ts  websocket-notifications.spec.ts
e2e/utils/: test-helpers.ts
elm/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
elm/src/: Api.elm  Main.elm  Types.elm  WebSocket.elm  main.js  style.css
log_docs/: PROJECT_LOG_2025-01-10_reschedule-system-implementation.md  PROJECT_LOG_2025-01-10_weather-alert-banner.md  PROJECT_LOG_2025-11-07_testing-infrastructure.md  PROJECT_LOG_2025-11-08_test-fixes-and-prd.md  PROJECT_LOG_2025-11-10_backend-monitoring-and-error-handling.md  PROJECT_LOG_2025-11-10_csrf-protection.md  PROJECT_LOG_2025-11-10_enhanced-loading-states.md  PROJECT_LOG_2025-11-10_real-time-form-validation.md  PROJECT_LOG_2025-11-10_security-hardening.md  current_progress.md
migrations/: 001_init.sql  002_add_aircraft_type.sql  003_add_weather_alerts.sql
mock-weather-api/: README.md  package-lock.json  package.json  server.js
public/: elm.js
server/: Cargo.toml
server/src/: auth.rs  csrf.rs  error.rs  main.rs  scheduler.rs
server/src/routes/: alerts.rs  bookings.rs  mod.rs  students.rs  weather.rs  websocket.rs
tests/: Cargo.toml  database_integration_test.rs  weather_integration_test.rs
(+4 files in other folders)
