[workspace]
members = ["core", "server"]
resolver = "2"

[workspace.dependencies]
# Axum web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
async-trait = "0.1"

# WebSocket
axum-typed-websockets = "0.6"

# Scheduling
tokio-cron-scheduler = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Testing
wiremock = "0.6"
proptest = "1"
