[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
weather_core = { path = "../core", package = "core" }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "weather_integration_test"
path = "weather_integration_test.rs"

[[test]]
name = "database_integration_test"
path = "database_integration_test.rs"
